k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:      travelagent
  namespace: travelagent
  labels:
    app: travelagent
spec:
  selector:
    app: travelagent
  ports:
    - protocol:   TCP
      port:       80
      targetPort: 8000
  type: ClusterIP
